# numbapyproject

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.binder/: postBuild  requirements.txt
.github/workflows/: ci.yml  docs.yml  release-testpypi.yml
api/: index.html
docs/: api.md  index.md
notebooks/: demo.ipynb
search/: search_index.json
src/numbapy/: __init__.py  _version.py  core.py
tests/: test_core.py
