[build-system]
requires = ["setuptools>=70", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "numbapy"
description = "Hello-world Python package demonstrating Numba acceleration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
keywords = ["numba", "jit", "example", "hello-world"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.24",
  "numba>=0.59",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/filbet4/numbapyproject"
Source = "https://github.com/filbet4/numbapyproject"
Documentation = "https://filbet4.github.io/numbapyproject/"
Issues = "https://github.com/filbet4/numbapyproject/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]
demo = [
  "matplotlib>=3.8",
  "notebook>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0.1.0"
write_to = "src/numbapy/_version.py"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
